added tsdoc for some workflow functions

--- a/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.declaration.hbs
+++ b/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.declaration.hbs
@@ -12,7 +12,7 @@
 
 {{#if (sectionEnabled "member_declaration_example")}}
 
-{{{example this 3}}}
+{{{example this 4}}}
 
 {{/if}}
 
@@ -20,7 +20,7 @@
 
 {{#if typeParameters}}
 
-{{titleLevel 3}} Type parameters
+{{{titleLevel 4}}} Type Parameters
 
 {{#with typeParameters}}
 
@@ -40,7 +40,7 @@
 
 {{#with type.declaration.indexSignature}}
 
-{{titleLevel 3}} Index signature
+{{titleLevel 4}} Index signature
 
 {{{indexSignatureTitle}}}
 
@@ -58,11 +58,11 @@
 
 {{#if type.declaration.children}}
 
-{{titleLevel 3}} Call signature
+{{{titleLevel 4}}} Call signature
 
 {{else}}
 
-{{titleLevel 3}} Type declaration
+{{{titleLevel 4}}} Type declaration
 
 {{/if}}
 
@@ -82,7 +82,7 @@
 
 {{#with type.declaration}}
 
-{{titleLevel 3}} Type declaration
+{{{titleLevel 4}}} Type declaration
 
 {{/with}}
 
