updates to the TSDocs

--- a/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.declaration.hbs
+++ b/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.declaration.hbs
@@ -68,7 +68,7 @@
 
 {{#each type.declaration.signatures}}
 
-{{> member.signature showSources=false }}
+{{> member.signature showSources=false commentLevel=5 }}
 
 {{/each}}
 
