added handling in theme for mutations and query types

--- a/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.hbs
+++ b/docs-util/packages/typedoc-plugin-markdown-medusa/src/resources/partials/member.hbs
@@ -16,7 +16,7 @@
 
 {{#each signatures}}
 
-{{> member.signature showSources=true parent=.. }}
+{{> member.signature-wrapper showSources=true parent=.. }}
 
 {{/each}}
 
